--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "npx tsc && node dist/index.js",
     "dev": "nodemon --exec ts-node ./src/index.ts",
-    "build": "npm tsc"
+    "build": "npx tsc"
   },
   "author": "",
   "license": "ISC",
@@ -24,5 +24,7 @@
     "@types/node": "^22.7.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
