--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     container_name: postgres_container
     restart: always
     environment:
-      POSTGRES_USER: Justin
-      POSTGRES_PASSWORD: bonjour_hello
-      POSTGRES_DB: blog_db
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - "5432:5432"
 
