--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.5",
     "node": "^20.18.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mysql": "^2.15.26",
     "@types/node": "^22.7.7",
     "@types/pg": "^8.11.10",
